<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2013-2015 The CyanogenMod Project
     SPDX-FileCopyrightText: 2017-2024 The OpenFDE Project
     SPDX-License-Identifier: Apache-2.0
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Setup Wizard</string>
    <string name="os_name" translatable="false">OpenFDE</string>

    <string name="lineage_wizard_script_uri" translatable="false">android.resource://org.lineageos.setupwizard/raw/lineage_wizard_script</string>
    <string name="lineage_wizard_script_user_uri" translatable="false">android.resource://org.lineageos.setupwizard/raw/lineage_wizard_script_user</string>
    <string name="lineage_wizard_script_managed_profile_uri" translatable="false">android.resource://org.lineageos.setupwizard/raw/lineage_wizard_script_managed_profile</string>

    <string name="activity_label_empty" />

    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="previous">Previous</string>
    <string name="start">Start</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="loading">Just a sec\u2026</string>

    <!-- Welcome page -->
    <string name="setup_welcome_message">Welcome to <xliff:g id="name" example="OpenFDE">%1$s</xliff:g></string>
    <string name="setup_managed_profile_welcome_message">Set up your work profile</string>
    <string name="emergency_call">Emergency call</string>
    <string name="accessibility_settings">Accessibility settings</string>

    <!-- Locale page -->
    <string name="setup_locale">Language</string>
    <string name="sim_locale_changed">%1$s SIM detected</string>

    <!-- Missing SIM page -->
    <string name="setup_sim_missing">SIM card missing</string>
    <string name="sim_missing_summary" product="tablet">A SIM card has not been detected in your tablet. To insert a SIM card, read the instructions that came with your device.</string>
    <string name="sim_missing_summary" product="default">A SIM card has not been detected in your phone. To insert a SIM card, read the instructions that came with your device.</string>

    <!-- Date & time page -->
    <string name="setup_datetime">Date &amp; time</string>
    <string name="date_time_summary">Set your time zone and adjust current date and time if needed</string>
    <string name="setup_current_time_zone">Current time zone</string>
    <string name="setup_current_date">Current date</string>
    <string name="setup_current_time">Current time</string>

    <!-- Restore backup page -->
    <string name="intro_restore_title">Restore apps and data</string>
    <string name="intro_restore_subtitle">If you have a Seedvault backup from <xliff:g id="name" example="OpenFDE">%s</xliff:g> or any other OS, you can restore it here.</string>
    <string name="intro_restore_button">Restore from backup</string>

    <!-- Location page -->
    <string name="setup_location">Location services</string>
    <string name="setup_city_title">Select City</string>
    <string name="setup_city_summary">Select your city for better location service support.</string>
    <string name="location_access_summary"><b>Allow apps that have asked your permission</b> to use your location information. This may include your current location and past locations.</string>
    <string name="location_agps_access_summary">When location is on, <b>download satellite assistance data from the internet</b>, which can greatly improve the GPS startup performance.</string>
    <string name="gps_panel_text">Choose location</string>
    <string name="gps_country">Country:</string>
    <string name="gps_province">Province:</string>
    <string name="gps_city">City:</string>

    <!-- download app page -->
    <string name="download_app">Initial Installation app</string>
    <string name="download">Download</string>
    <string name="cancel">Cancel</string>
    <string name="start_download">Start download</string>
    <string name="download_failed">Download failed</string>
    <string name="retry">Retry</string>
    <string name="installing">Installing</string>
    <string name="installed">Installed</string>
    <string name="done_button_text">Done</string>
    <string name="setup_succeeded">Setup completion</string>
    <string name="finish_button_text">start to use</string>
    
    <!-- Recovery update page -->
    <string name="update_recovery_title">Update Lineage Recovery</string>
    <string name="update_recovery_description">Updates Lineage Recovery on first boot subsequent to every update.</string>
    <string name="update_recovery_warning">Recovery will be updated as soon as you finish the setup. If you wish to keep it intact, disable this feature.</string>
    <string name="update_recovery_setting">Update Lineage Recovery alongside the OS</string>
    <string name="update_recovery_full_description"><xliff:g id="recovery_update_description">%1$s</xliff:g>\n<xliff:g id="recovery_update_warning">%2$s</xliff:g></string>

    <!-- OpenFDE features page -->
    <string name="setup_services">OpenFDE features</string>
    <string name="services_pp_explanation">These services work for you to extend the capabilities of your device. Data will be used in accordance with <xliff:g id="name" example="OpenFDE">%1$s</xliff:g>\'s privacy policy.</string>
    <string name="services_find_privacy_policy">You can read the privacy policy on another device by visiting <xliff:g id="uri" example="https://lineageos.org/legal">%1$s</xliff:g></string>
    <string name="services_privacy_policy_uri" translatable="false">https://lineageos.org/legal</string>
    <string name="services_help_improve_cm">Help improve <xliff:g id="name" example="OpenFDE">%s</xliff:g></string>
    <string name="services_metrics_label"><xliff:g id="name" example="Help improve OpenFDE">%1$s</xliff:g> by automatically sending diagnostic and usage data to <xliff:g id="name" example="OpenFDE">%2$s</xliff:g>. This information can’t be used to identify you and lends a hand to teams working on things like battery life, app performance, and new <xliff:g id="name" example="OpenFDE">%3$s</xliff:g> features.</string>
    <string name="services_os_nav_keys_label"><b>Use on screen navigation keys</b> instead of hardware keys.</string>
    <string name="services_full_description"><xliff:g id="pp_explanation">%1$s</xliff:g>\n<xliff:g id="pp_find">%2$s</xliff:g></string>

    <!-- Navigation page -->
    <string name="setup_navigation">Navigation</string>
    <string name="navigation_summary">Choose preferred navigation method</string>
    <string name="gesture_navigation">Gesture navigation</string>
    <string name="two_button_navigation">2-button navigation</string>
    <string name="navbar_navigation">3-button navigation</string>
    <string name="hide_gesture_hint">Hide gestural navigation hint</string>

    <!-- Theme page -->
    <string name="setup_theme">Theme</string>
    <string name="theme_summary">Dark theme uses a black background to help keep battery alive longer on some screens</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>

    <string name="unfinished_task_message_for_exit">There are tasks that have not been downloaded completely. Do you want to proceed directly?</string>
    <string name="unfinished_task_message_for_previous">There are tasks that have not been downloaded completely. Do you want to previous directly?</string>
    <string name="exit_install_button_label">sure</string>
    <string name="continue_install_button_label">Cancel</string>

    <string name="setup_keyboard">Select Keyboard</string>

    <string name="iflytek">讯飞输入法</string>
    <string name="yyb">应用宝</string>
    <string name="yyb_icon">"iVBORw0KGgoAAAANSUhEUgAAAMwAAADACAMAAAB/Pny7AAAA81BMVEX/////zAAAgP8r1qn/AFX/AFP/ygAAff8Ae///AFD/AE7///wf1aYAef//AEwAdv8+2bD/9fnN9uv/jq///fUzj////O7/4oL/7Kv/+/3/+ub/0zH/zyHF8uX5/P9P27TG5P8eiP//xdb/vs//AEb/9tf/883/55r/7bj/2Ez/11v/8cPx/fpe3rrj+fNz5MaM58282/8AcP9Elv+t0v//s8f/1+P/N27/4uzk8f//a5P/HF//R3f/mLD/5Iz/3m618OCj7deOwv9ksP9bpf90uP//qcP/X43/OGL/gqbZ6f//ADn/UIRPnf//eZf/orP/YYIYTdl8AAAIUklEQVR4nO2baVfaTBSAY0hIAhQVkV1EdgQUlUUMCgW06itt//+veScRBbJM7tSZgOfM89F6Is+5y9w7oYLA4XA4HA6Hw+FwOBwOh8PhcDgcDofDCccT78Tj4W1/li8Qz1Sq1Waq9pA0eHiopZrVaiXz/ZTi1XrqYdzI5nJ7a+Ry2ca4lqpX49v+fHAy9VqykdsL7jkS3Ms1krVm4htEKJ6pJ8+ze0EXk6VPcC97Xkts+7N6kKgmG1mcxsonl9rtXMvUxzlsRNbLZ7ddMrUGUMR02eWSydRg6bV0qW3782JI1ElUdtol3jzHdy9bjm37E7sSrtTAZW+S3d16idfHbsejm8vO9jGywkfny+66hKvjnLfAuovz+dK6uGj5/uGtNMnC4ni+tCadtklnslWhFKGKQx+LtQORwJJI5DK2DQ2D8ANR4Tu5XLQjnyrvOu3t6CSS5C6bOdaabKq86/zcQrJlvuxy0bGavOt0fLfJJAlVgkAXw+bCX5d4jdxl8wmtzoGLTCDgr004RdiTbS7CxN0F2fiZaZVzwoKxzWOxtq321xIt4GMXCJMmmW2Gaf3EuBg2E99kKg2ywNjnsQucimFz4Nt5UydzcZhh8IExbNo+NYHEmEjGYRdrnXq4IJtLf8qmkv3qXtnyCoxh89MXmeoX44L6MkAm4E/Z1Alcso77fgci40uikZz+Lvv+JUTGl0QjkHHbkWEygQP2HQ0s477vA2Uil8xlwsCasc3J5DKBE+Y2sG5mny1XeJ6ZH7DvARXQyJytuz8hBpU5mLCWyUAmAOeevKQFdEFVw7wHAGYzjztY0EFjhoZ51VS98iyYq+Pvk0+gMuz3tPiDl4vX3XgLt5tt5Bn7u6cq9iWZZ1wQE2hk2C+d4RTuijnr7SK0oFXjQwtIYG6aIC5o1wQenAEfNujM2NUF+M7ipA0MTYf+u6nhq8XG5YIG/k785BQ2OzNYoK+Or/IbP3C8aw42qvBHQm3o97Pp9c3V5k/itlfMweyY6DsksQBoSevQ9DDI36iq1UbIPJyvulpwr3HeJHzqyQFof6Yl8cFwXxR/HFtthEwqeW58ESuXbSRrVfJKjUEyLUK7aLrXommTt/5DOFNt1uv1ZuXf3rtC6ob6+jxDkUE2tkz7Mifegw31hfNYFbdnQ7tozMAgVHvdfBXvTIvQHc9eP2RE9aZA9ckCoKdRPmm6Pz5kROWMemxiHjaUO8DjSkZUGdjgL9Ipd4D5moxjh/4i+C4QaVP9Ywt1TQbVDXUb7OlJVyZ/vCEjKvRtsD3tlOYMMDxWRKsNxceb4GJD9dL51SojKvTPG4wN1Vc1BZsMm57mZkNX5szqgmzEAsW/YOK6STOXYXF6nricN+xlDBufOrQPMqgLdP2x8UMGdWj6Nk5zGututuwCDE5PBxuqMvZz5oMfZ12Kf8fEYRagKmObANZtGOyeNhmaE0D+RnWTQTM0/dhYZ+hTqqvmwl0GbdKsbSivABv7jB82G12AsswjTgbNadRtNjo05U2zi5VBcxp9m7WeRvkOYHU74xob+rPASobyewB8ZMyeRt3mswtQvjcTjjHtzITBnPZ5ekYoP3jmkWfGZEPf5j02lJuZIFxde8kYsfmnR6f7pd5Tr1e8tf/TexeITL722W0MPSNj7Df/YNM/uhsNdMRgdHdv8zFtaJcMdqBZ2Sikc1r/17MUCmkyQgtp0vOLVcewof7mTJh655lhQxSb9JEclWXpE1mL6k/pzd9BXYD6O03h1XVutmQavAv038qaZEH+75clODEGXwkeLryOGkKbdHEUsqoYNuW3vsWG/pdn8lNACxDh5026NArJDjKSHLLaMODqDJRoogJ7G1UcaY4uyEa+c+jSdBli14A1fsyGEJeoi4skadL9IWOZ/FQEhkbxTrTioOymggg9lxjLCK+4dXMjNDdeocG7SFL0N+vQDKcwF1G89jhtioMo1kXS9CJjGeHK/Y7GEpoFNs+KA6eevEGZedUMZ0AZUcXlGcBFio6YNzR4aDB5VtQ9csxAlpifNfkZNDIzd5dngAua0nqsZcAHpzp3eUDas/aXMjLzohGER1h3Vm9cXEojkAuSOWIvM4SsNa4yYBd/ZIQuKM/UhYuL2zy2HZm8982G6FYzxQHUxZ+aMd47AeZNderkooNd0B7AfDoz6QLmzf2Cg4vmfVauZHT2O41BHn+JbqCc2ceZokzgIkWtyzMrhnOvjrb/aJVJl3QSF6n8J+34t+lT8OjPimL5fwNmHyNxCQ2YT82feAwC+zNLYAh6sokc8qMxL8lPcTbqccHy+4QuaGb2p/y9bRRxaglMaeC+7zuh6U8+uuAuBBTx0bLMwObktSSTXvxLMpPho+Jso8wt1V+CzckrF439TZPNZqo62agziwtw5l+5lP13QZnWVW1jmro/teYYYEfewHbX7BOvM3U9OoqyvyhYfqVE6KKVX7ZhYlKYnyEHxTQRzxa2zZ+wXmRNvt+GxgfD7uN8vlgs5rOp9dhHZyVZH5PlEfvN34vh8HXocFGWJoyLpt8V/ZrISIHvyO9hiQ6OtlP6AAhnS7n81vP5qCSgB9+REWXpqL+rKUa6I5ffirsbFpIdGanoTzusIpRCUBc5pA18XF7IAe/Isqbpb/avZewS6R5ohpG1kPz862mnVYTDHmAXk7Wo9vz3xenLPzvFYe9uECpHNdn1zTgq+bL+96V3u8u18sFtsXf/pmvlaEgzv+KzhqZFo2V99PtP6XZ3jxUr6X6xdH/3NtB1aWUi6bo+ujvqFfvfISSbpG9v+30UpKMl90/Ffv/2W+SWG+nDT75PYnE4HA6Hw+FwOBwOh8PhcDgcDofD2TH+B49lBaTrDOS7AAAAAElFTkSuQmCC"</string>
</resources>
