<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2021-2024 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:background="@drawable/rounded_bottom_background">

    <Button
        android:id="@+id/navbar_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/skip"
        android:visibility="gone"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_centerInParent="true">
        <android.widget.Button
            android:id="@+id/navbar_previous"
            android:layout_width="96dp"
            android:layout_height="32dp"
            android:background="@drawable/button_rounded_background_gray"
            android:layout_marginEnd="24dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/previous"/>
        <android.widget.Button
            android:id="@+id/navbar_next"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:background="@drawable/button_rounded_background_blue"
            android:textColor="@color/white"
            android:paddingHorizontal="27dp"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/next"/>
    </LinearLayout>


</RelativeLayout>
