<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2013 The CyanogenMod Project
     SPDX-FileCopyrightText: 2017-2024 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="900dp"
        android:layout_height="780dp"
        android:layout_centerInParent="true"
        android:background="@drawable/rounded_background">
        <ImageView
            android:layout_marginTop="61dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_datetime"/>
        <TextView
            android:layout_marginTop="200dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/setup_datetime"
            android:textColor="#ff262626"
            android:textSize="32sp"
            android:layout_width="wrap_content"
            android:layout_height="45dp"/>
        <TextView
            android:layout_marginTop="269dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/date_time_summary"
            android:textColor="#ff262626"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="22dp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignTop="@id/timezone_list"
            android:layout_marginRight="12dp"
            android:layout_toLeftOf="@id/timezone_list">
            <TextView
                android:id="@+id/time_zone_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/time_zone_colon"
                android:layout_marginRight="0dp"
                android:layout_centerVertical="true"
                android:text="@string/setup_current_time_zone"
                android:textSize="16sp"
                android:textColor="@color/dark_gray"/>
            <TextView
                android:id="@+id/time_zone_colon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:text=":"
                android:textSize="16sp"
                android:textColor="@color/dark_gray"/>
        </RelativeLayout>

        <Spinner
            android:id="@+id/timezone_list"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="256dp"
            android:layout_marginTop="339dp"
            android:background="@drawable/custom_spinner_background"
            android:saveEnabled="false" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignTop="@id/date_text"
            android:layout_marginRight="12dp"
            android:layout_toLeftOf="@id/date_text">
            <TextView
                android:id="@+id/date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/date_colon"
                android:layout_marginRight="0dp"
                android:layout_centerVertical="true"
                android:text="@string/setup_current_date"
                android:textSize="16sp"
                android:textColor="@color/dark_gray"/>
            <TextView
                android:id="@+id/date_colon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:text=":"
                android:textSize="16sp"
                android:textColor="@color/dark_gray"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/date_text"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:layout_below="@id/timezone_list"
            android:layout_alignParentRight="true"
            android:layout_marginRight="256dp"
            android:gravity="start|center_vertical"
            android:paddingLeft="12dp"
            android:textSize="16sp"
            android:clickable="true"
            android:fontFamily="sans-serif-medium"
            android:background="@drawable/rounded_5dp_background_light"
            android:textColor="@color/dark_gray"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignTop="@id/time_text"
            android:layout_marginRight="12dp"
            android:layout_toLeftOf="@id/time_text">
            <TextView
                android:id="@+id/time_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/time_colon"
                android:layout_marginRight="0dp"
                android:layout_centerVertical="true"
                android:text="@string/setup_current_time"
                android:textSize="16sp"
                android:textColor="@color/dark_gray"/>
            <TextView
                android:id="@+id/time_colon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:text=":"
                android:textSize="16sp"
                android:textColor="@color/dark_gray"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/time_text"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:paddingLeft="12dp"
            android:textSize="16sp"
            android:layout_below="@id/date_text"
            android:layout_alignParentRight="true"
            android:layout_marginRight="256dp"
            android:gravity="start|center_vertical"
            android:clickable="true"
            android:background="@drawable/rounded_5dp_background_light"
            android:textColor="@color/dark_gray"
            android:fontFamily="sans-serif-medium"/>

        <LinearLayout
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_marginTop="339dp"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/page"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fillViewport="true">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </LinearLayout>
                </ScrollView>
            </FrameLayout>
        </LinearLayout>

        <org.lineageos.setupwizard.NavigationLayout
            android:id="@+id/navigation_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
<com.google.android.setupdesign.GlifLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/setup_wizard_layout"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


</com.google.android.setupdesign.GlifLayout>
</RelativeLayout>