<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2015 The CyanogenMod Project
     SPDX-FileCopyrightText: 2017-2024 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<com.google.android.setupdesign.GlifLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/setup_wizard_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/SudContentFrame">

        <FrameLayout
            android:id="@+id/page"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="16dp"
                        android:layout_marginTop="1dp"
                        android:background="@color/white"
                        android:orientation="horizontal">

                        <TextView
                            android:text="@string/gps_country"
                            android:layout_weight="2"
                            android:layout_width="0dp"
                            android:textSize="16sp"
                            android:textColor="#999"
                            android:layout_gravity="center"
                            android:layout_height="match_parent" />

                        <TextView
                            android:id="@+id/txtCountry"
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:text=""
                            android:textSize="16sp"
                            android:textColor="#333"
                            android:layout_gravity="center"
                            android:drawableRight="@drawable/icon_down"
                            android:layout_height="match_parent" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="16dp"
                        android:layout_marginTop="1dp"
                        android:background="@color/white"
                        android:orientation="horizontal">

                        <TextView
                            android:text="@string/gps_province"
                            android:layout_weight="2"
                            android:layout_width="0dp"
                            android:textSize="16sp"
                            android:textColor="#999"
                            android:layout_gravity="center"
                            android:layout_height="match_parent" />

                        <TextView
                            android:id="@+id/txtProvince"
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:text=""
                            android:textSize="16sp"
                            android:textColor="#333"
                            android:layout_gravity="center"
                            android:drawableRight="@drawable/icon_down"
                            android:layout_height="match_parent" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="16dp"
                        android:layout_marginTop="1dp"
                        android:background="@color/white"
                        android:orientation="horizontal">

                        <TextView
                            android:text="@string/gps_city"
                            android:layout_weight="2"
                            android:layout_width="0dp"
                            android:textSize="16sp"
                            android:textColor="#999"
                            android:layout_gravity="center"
                            android:layout_height="match_parent" />

                        <TextView
                            android:id="@+id/txtCity"
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:text=""
                            android:textSize="16sp"
                            android:textColor="#333"
                            android:layout_gravity="center"
                            android:drawableRight="@drawable/icon_down"
                            android:layout_height="match_parent" />

                    </LinearLayout>

                </LinearLayout>
            </ScrollView>
        </FrameLayout>

        <org.lineageos.setupwizard.NavigationLayout
            android:id="@+id/navigation_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</com.google.android.setupdesign.GlifLayout>